about section whitespace repair, services btns text center,  header scroll mouse position

--- a/styles/style.css
+++ b/styles/style.css
@@ -128,7 +128,7 @@ button:hover {
 }
 
 .mouse-scroll {
-    top: 90%;
+    bottom: 2%;
     left: 50%;  
     transform: translate(-50%, -50%);
     width: 1.5625rem;
@@ -187,6 +187,7 @@ button:hover {
     color: #ffffff;
     font-family: "Raleway";
     font-weight: 300;    
+    word-break: break-all;
 }
 
 @media (max-width: 768px) {
